# mailattachments2dropbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  mapping.yaml.example  pyproject.toml
scripts/: setup_dropbox.py
src/mailattachments2dropbox/: __main__.py  config.py  dropbox_client.py  logging_setup.py  mail_client.py  mail_parser.py  pipeline.py  sentinel.py
tests/: conftest.py  test_mail_parser.py  test_pipeline.py  test_sentinel.py
