[project]
name = "mailattachments2dropbox"
version = "0.1.0"
description = "Lightweight headless worker that ingests email attachments from an IMAP mailbox and stores them in Dropbox under a configurable folder taxonomy."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dennis Menken" }]
requires-python = ">=3.13"
dependencies = [
    "aioimaplib>=2.0.1",
    "dropbox>=12.0.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
mailattachments2dropbox = "mailattachments2dropbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailattachments2dropbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# Enable a meaningful set of rule groups. See https://docs.astral.sh/ruff/rules/
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
    "TCH",  # flake8-type-checking
    "ASYNC",
    "PTH",  # use pathlib
    "RET",  # return statements
]
ignore = [
    "PLR0913",  # too many arguments: pipelines genuinely need a few collaborators
    "PLR0912",  # too many branches: occasional dispatch tables need this
    "PLR0911",  # too many return statements: routing functions branch on error paths
    "PLR2004",  # magic value used in comparison: tests use literals on purpose
    "E501",     # line-length is enforced by the formatter; do not double-flag
    "TC001",    # do not force runtime imports into TYPE_CHECKING blocks
    "TC002",
    "TC003",
    "RUF005",   # tuple concatenation vs unpacking is a wash; allow both
    "SIM105",   # contextlib.suppress is not always clearer than try/except/pass
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]
"scripts/**/*.py" = ["T201"]  # scripts print() to stdout deliberately

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests", "scripts"]
plugins = ["pydantic.mypy"]
# Third-party packages without ship type info; treat their modules as Any.
[[tool.mypy.overrides]]
module = ["aioimaplib", "aioimaplib.*", "dropbox", "dropbox.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false  # tests can omit return types

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
